# random_foreach

./: AesFunc.h  CMakeLists.txt  Fnv1aCiphers.h  GenericFeistel.h  LazyFisherYates.h  ManyU32.h  MurmurCryptFixed64.h  PlaygroundFeistel.h  README.md  ShaFeistel.h  XoroFeistel.h  bigcrush.cpp  binaryrng.cpp  donothing.cpp  murmur32.h  murmurcrypt.cpp  murmurcrypt.h  murmurmain.cpp  performance_unrolled.cpp  run_performancetests.sh  shootout.cpp  simdfeistel.h
